# bigquery-polars

./: Cargo.toml  README.md
bigquery-arrow2/: Cargo.toml
bigquery-arrow2/src/: querying.rs
bigquery-polars/: Cargo.toml
bigquery-polars/src/: errors.rs  lib.rs  querying.rs
